--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "axios": "^0.17.1",
     "express": "^4.16.2",
-    "md5": "^2.2.1",
+    "mongodb": "^2.2.33",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "sha1": "^1.1.1",
     "webpack": "^3.10.0"
   },
   "devDependencies": {
