--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "A daily quest-based dramatization of the settlement and development of america",
   "main": "app.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "nodemon server.js",
+    "wp": "webpack",
+    "mg": "mongod",
+    "dev": "concurrently --kill-others \"npm start\" \"npm run wp\" \"npm run mg\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
@@ -28,6 +31,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "concurrently": "^3.5.1",
     "css-loader": "^0.28.7",
     "style-loader": "^0.19.1"
   }
