--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.17.1",
+    "browser-sync": "^2.23.1",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "mongodb": "^2.2.33",
     "react": "^16.0.0",
@@ -31,6 +33,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "browser-sync-webpack-plugin": "^1.2.0",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.7",
     "style-loader": "^0.19.1"
